--- a/src/components/atoms/Button/Button.module.scss
+++ b/src/components/atoms/Button/Button.module.scss
@@ -1,4 +1,13 @@
-.button {
+.small {
+  width: 70px;
+  height: 35px;
+  border-radius: 10px;
+  font-weight: bold;
+  transition: 0.3s;
+  font-size: 12px;
+}
+
+.medium {
   width: 112px;
   height: 40px;
   border-radius: 10px;
