--- a/src/components/organisms/TodoList/TodoList.module.scss
+++ b/src/components/organisms/TodoList/TodoList.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  width: 80%;
+  width: 100%;
 }
 
 .todos {
@@ -8,7 +8,7 @@
 }
 
 .todo {
-  border-bottom: 1px solid;
+  border-bottom: 1px solid #3c2923;
   padding: 10px;
   position: relative;
   margin-bottom: 15px;
