--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,12 +1,11 @@
 .container {
   min-height: 100vh;
-  padding: 0 0.5rem;
+  padding: 20px 0.5rem;
   // display: flex;
   // flex-direction: column;
   // justify-content: center;
   // align-items: center;
   height: 100vh;
-  background-color: #e1f0e9;
 }
 
 .main {
