--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #e1f0e9;
 }
 
 a {
@@ -13,4 +14,10 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.component-wrapper {
+  width: 70vw;
+  margin: 0 auto;
+  min-width: 500px;
 }
