--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,6 +1,6 @@
 .container {
   min-height: 100vh;
-  padding: 20px 0.5rem;
+  padding: 20px 0;
   // display: flex;
   // flex-direction: column;
   // justify-content: center;
